tests/NormalTests/paczka1/fuzzy1/38740528.err
Error in line 1: TZYnHkfNu A887 83,5
Error in line 3: pJtLc A116 2,9
Error in line 4: S785 S785 16,4
Error in line 6: TZYnHkfNu A116 63,1
Error in line 7: pJtLc S785 71,6
Error in line 27: uWNCOY A116 86,8
Error in line 21: pBuAoprzyMi A116 11,8
